...
    final deviceHeight = MediaQuery.of(context).size.height;
    return Form(
      key: widget.formKey,
      child: Column(
        children: <Widget>[
          TextFormField(
            key: const Key('nameTextField'),
            controller: widget.nameController,
            style: GoogleFonts.notoSans(
              color: Colors.black,
              fontWeight: FontWeight.w700,
            ),
            keyboardType: TextInputType.name,
...
                FocusScope.of(context).requestFocus(widget.surnameFocusNode),
          ),
          SizedBox(
            height: deviceHeight * 0.032,
          ),
          TextFormField(
            key: const Key('surnameTextField'),
            controller: widget.surnameController,
            focusNode: widget.surnameFocusNode,
            style: GoogleFonts.notoSans(
              color: Colors.black,
              fontWeight: FontWeight.w700,
            ),
...
                FocusScope.of(context).requestFocus(widget.surnameFocusNode),
          ),
          SizedBox(
            height: deviceHeight * 0.032,
          ),
          TextFormField(
            key: const Key('birthDateTextField'),
            controller: widget.birthDateController,
            focusNode: widget.birthDateFocusNode,
            style: GoogleFonts.notoSans(
              color: Colors.black,
              fontWeight: FontWeight.w700,
            ),
...
                FocusScope.of(context).requestFocus(widget.cityFocusNode),
          ),
          SizedBox(
            height: deviceHeight * 0.032,
          ),
          TextFormField(
            key: const Key('cityTextField'),
            controller: widget.cityController,
            focusNode: widget.cityFocusNode,
            style: GoogleFonts.notoSans(
              color: Colors.black,
              fontWeight: FontWeight.w700,
            ),
...
            ),
          ),
          SizedBox(
            height: deviceHeight * 0.032,
          ),
          TextFormField(
            key: const Key('phoneTextField'),
            controller: widget.phoneController,
            focusNode: widget.phoneFocusNode,
            style: GoogleFonts.notoSans(
              color: Colors.black,
              fontWeight: FontWeight.w700,
            ),
...
                FocusScope.of(context).requestFocus(widget.emailFocusNode),
          ),
          SizedBox(
            height: deviceHeight * 0.032,
          ),
          TextFormField(
            key: const Key('emailTextField'),
            controller: widget.emailController,
            focusNode: widget.emailFocusNode,
            style: GoogleFonts.notoSans(
              color: Colors.black,
              fontWeight: FontWeight.w700,
            ),
...
                FocusScope.of(context).requestFocus(widget.passwordFocusNode),
          ),
          SizedBox(
            height: deviceHeight * 0.032,
          ),
          TextFormField(
            key: const Key('passwordTextField'),
            controller: widget.passwordController,
            focusNode: widget.passwordFocusNode,
            style: GoogleFonts.notoSans(
              color: Colors.black,
              fontWeight: FontWeight.w700,
            ),
...
