...
      'image': 'assets/images/tech.png',
      'url': 'https://www.tech387.com/',
    },
  ];

  static const List<String> status = [
    'Student',
    'Employed',
    'Unemployed',
  ];
}

var textQuestions = [
...
